k8strain3/config-配置管理/opa/webhook-configuration.yaml
#此文件需要放在存有ca.crt的目录下执行
kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: opa-validating-webhook
webhooks:
  - name: validating-webhook.openpolicyagent.org
    admissionReviewVersions: ["v1", "v1beta1"]
    namespaceSelector:
      matchExpressions:
      - key: openpolicyagent.org/webhook
        operator: NotIn
        values:
        - ignore
    failurePolicy: Ignore
    rules:
      - apiGroups:
        - '*'
        apiVersions:
        - '*'
        operations:
        - '*'
        resources:
        - '*'
    sideEffects: None
    clientConfig: #注意  caBundle中的内容值md文档中创建ca.crt解码出来的内容  cat ca.crt | base64 | tr -d '\n'
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURBekNDQWV1Z0F3SUJBZ0lKQU5SRkxlQ0tzYXhlTUEwR0NTcUdTSWIzRFFFQkN3VUFNQmN4RlRBVEJnTlYKQkFNTURHRmtiV2x6YzJsdmJsOWpZVEFnRncweU1qQTFNVEl3TmpVNU5ETmFHQTh5TWprMk1ESXlOVEEyTlRrMApNMW93RnpFVk1CTUdBMVVFQXd3TVlXUnRhWE56YVc5dVgyTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DCkFROEFNSUlCQ2dLQ0FRRUF3R2IzT3VWWGYwcm5paVhJOFo1VXdQYmYxUnpvVkp1cm8vQmlIZEdKdnRpODZLdDgKQy9QTTljU0xxOVVGOGhXbXFhcU9jODErVWU0Q1BLcVlEK0xYVXExdmZlTEpDdE5ZM0M0NVNia0RhNEJFSUcxbApQN0Y2dGp1dng4 [...]
      service:
        namespace: opa
        name: opa
